--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">SimpleTodo</string>
+
+    <string name="title_hint">Title</string>
+    <string name="due_date_hint">Due date</string>
+    <string name="description_hint">Description</string>
 </resources>
